# tf_kdtree

./: .gitignore  Dockerfile  LICENSE  README.md  benchmark_results.npz  finish_build  fix_missing_tflib.py  nn_distance.py
scripts/: benchmark.py  plot_benchmark.py  test_knn_unit.py
src/: CMakeLists.txt  cutils.cuh  kdtree.hpp  test_kdtree.cpp  tf_kdtree.cpp  tf_kdtree_g.cu  tf_nndistance_g.cu
